# snake-vala

./: .gitignore  .gitmodules  README.md  meson.build  windows32-build.conf  windows64-build.conf
src/: game-over-scene.vala  main-scene.vala  main.vala  meson.build  player.vala  spawner.vala
src/Core/: IDrawable.vala  Object2D.vala  game-engine.vala  game-object.vala  input-handler.vala  input-manager.vala  primitive-shape.vala  renderer-manager.vala  scene.vala  texture.vala  vector2f.vala
src/Core/Audio/: audio.vala
src/Core/Physics/: bounding-box.vala  i-collider.vala
src/Core/Text/: label.vala
src/scenes/: start-menu.vala
