sources = files (
  'Core/game-engine.vala',
  'Core/game-object.vala',
  'Core/IDrawable.vala',
  'Core/input-manager.vala',
  'Core/scene.vala',
  'Core/texture.vala',
  'Core/Physics/i-collider.vala',
  'Core/Physics/bounding-box.vala',
  'main-scene.vala',
  'main.vala',
  'player.vala',
  'spawner.vala',
)
