sources = files (
  'Core/game-engine.vala',
  'Core/game-object.vala',
  'Core/IDrawable.vala',
  'Core/input-manager.vala',
  'Core/scene.vala',
  'Core/texture.vala',
  'Core/vector2f.vala',
  'Core/Audio/audio.vala',
  'Core/Physics/i-collider.vala',
  'Core/Physics/bounding-box.vala',
  'Core/Text/label.vala',
  'main-scene.vala',
  'game-over-scene.vala',
  'main.vala',
  'player.vala',
  'spawner.vala',
)
